flux/infrastructure/secure-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
    name: tls-gateway
    namespace: kube-system
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt
spec:
    gatewayClassName: traefik
    addresses:
        - type: IPAddress
          # axiom-vm-k8s-master
          value: "10.67.1.103"
    listeners:
        # should not have more than 50 here due to letsencrypt rate limiting https://letsencrypt.org/docs/rate-limits/
        # mTLS depends on https://github.com/traefik/traefik/issues/11975
        - name: https
          protocol: HTTPS
          port: 443
          hostname: "*.axiom.lucasfehres.nl"
          tls:
              certificateRefs:
                  - kind: Secret
                    name: tls-gateway-cert
          allowedRoutes:
              namespaces:
                  from: Selector
                  selector:
                      # Important for every unscoped subdomain!
                      matchExpressions:
                          - key: axiom.lucasfehres.nl/internal
                            operator: NotIn
                            values:
                                - "true"

        - name: https-che-ood
          protocol: HTTPS
          port: 443
          hostname: "*.ood.che.axiom.lucasfehres.nl"
          tls:
              certificateRefs:
                  - kind: Secret
                    name: tls-gateway-che-ood-cert
          allowedRoutes:
              namespaces:
                  from: Selector
                  selector:
                      matchLabels:
                          kubernetes.io/metadata.name: chesem3ood

        - name: otel-https
          protocol: HTTPS
          port: 4318
          hostname: "*.otel.axiom.lucasfehres.nl"
          tls:
              certificateRefs:
                  - kind: Secret
                    name: tls-gateway-otel-cert
          allowedRoutes:
              namespaces:
                  from: All

        - name: lucasfehres-https
          protocol: HTTPS
          port: 443
          hostname: "lucasfehres.nl"
          tls:
              certificateRefs:
                  - kind: Secret
                    name: tls-gateway-lucasfehres-cert
          allowedRoutes:
              namespaces:
                  from: All
